--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		          		<span class="subheading">Hello</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Ketaki Barde</span></h1>
 			            <h2 class="mb-4">An Aspiring Data Scientist</h2>
-			            <p><a href="#" class="btn-custom">I'm in for internships !</a></p>
+			            <p><a href="#contact-section" class="btn-custom">I'm in for internships !</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -81,7 +81,7 @@
 	    					</a>
 		          	<div class="text">
 			            <h1 class="mb-4 mt-3">I'm a <span>ML and NLP enthusiast</span> from India</h1>
-			            <p><a href="#" class="btn-custom">I'm in for internships !</a></p>
+			            <p><a href="#contact-section" class="btn-custom">I'm in for internships !</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -277,7 +277,7 @@
 						<h2>I'm <span>Looking</span> For Internships</h2>
 					</div>
 					<div class="col-md-4 col-lg-3 d-flex align-items-center ftco-animate">
-						<p class="mb-0"><a href="#" class="btn btn-white py-4 px-5">Hire me</a></p>
+						<p class="mb-0"><a href="#contact-section" class="btn btn-white py-4 px-5">Hire me</a></p>
 					</div>
 				</div>
 			</div>
@@ -458,8 +458,8 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Lets talk about</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="ftco-heading-2">I like to talk about</h2>
+              <p>Rocks. Tennis. Space. Dragons. More Rocks. Bacteria. Big Rocks. Machine Learning. NLP. Data. People who like Rocks. India. Phantasmagoria. Everything</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -476,18 +476,6 @@
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Services</h2>
-              <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Design</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Business Strategy</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li>
               </ul>
             </div>
           </div>
